--- a/startpage.html
+++ b/startpage.html
@@ -53,7 +53,10 @@
     .wx-mini{display:flex;gap:12px;color:var(--muted)}
     .wx-svg{width:100%;height:170px;display:block}
     .wx-btn{padding:6px 10px}
-    .wx-axis text{font-size:10px;fill:#9bb3c6}
+    /* stejný vzhled pro Y (text uvnitř .wx-axis) i X (text.wx-axis) */
+    .wx-axis text,
+    text.wx-axis { font-size:10px; fill:#9bb3c6 }
+    /* konec úpravy pro stejný vzhled pro Y (text uvnitř .wx-axis) i X (text.wx-axis) */
     .wx-legend::before{content:"";display:inline-block;width:8px;height:8px;border-radius:999px;background:rgb(56,189,248);margin-right:6px;vertical-align:middle}
     .wx-axis line{stroke:#294050;stroke-width:1}
     .wx-ygrid line{stroke:#1a2a36;stroke-width:1;opacity:.5}
